--- a/sobre.html
+++ b/sobre.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Anac Ambiental</title>
+    <title>Sobre</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sobre.css">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
                 <li class="nav-item"><a href="index.html" onclick="fecharMenu()">Home</a></li>
                 <li class="nav-item"><a href="lixo.html" onclick="fecharMenu()">Lixo Eletrônico</a></li>
                 <li class="nav-item"><a href="ambiente.html" onclick="fecharMenu()">Meio Ambiente</a></li>
-                <li class="nav-item"><a href="empresas.html" onclick="fecharMenu()">Empresas</a></li>
+                <li class="nav-item"><a href="empresas" onclick="fecharMenu()">Empresas</a></li>
                 <li class="nav-item"><a href="https://www.instagram.com/anac_ambiental/" onclick="fecharMenu()">Posts</a></li>
             </ul>
             <div class="menu">
@@ -28,16 +28,20 @@
     </header>
     <main>
         <section class="home">
-            <div class="home-text">
-                <h4 class="text-h4">Welcome Anac Ambiental</h4>
-                <h1 class="text-h1">Vamos Cuidar do Meio Ambiente!</h1>
-                <p>"Preservar a natureza é preservar a vida — cada árvore em pé, cada rio limpo e cada ar puro que respiramos são heranças para as próximas gerações."</p>
-                <a class="home-btn"href="sobre.html">Sobre Nós</a>
-            </div>
             <div class="home-img">
                 <img src="img/ambiente.png" alt="logo
                 ">
             </div>
+            <div class="home-text">
+                <h4 class="text-h4"></h4>
+                <h1 class="text-h1">Sobre Nós</h1>
+                <p>A ANAC Ambiental nasceu com o propósito de promover soluções sustentáveis e contribuir para a preservação do meio ambiente. Acreditamos que o equilíbrio entre o desenvolvimento e a conservação da natureza é essencial para um futuro mais verde e consciente. <br><br>
+
+                Nosso compromisso é oferecer informações, projetos e iniciativas que incentivem práticas ecológicas, minimizem impactos ambientais e fortaleçam a educação ambiental. Trabalhamos para inspirar pessoas e empresas a adotarem uma postura responsável, garantindo a sustentabilidade das próximas gerações. <br><br>
+                    
+                💚 Junte-se a nós nessa missão!</p>
+            </div>
+            
         </section>
     </main>
 
