--- a/sobre.html
+++ b/sobre.html
@@ -29,7 +29,7 @@
     <main>
         <section class="home">
             <div class="home-img">
-                <img src="img/ambiente.png" alt="logo
+                <img src="img/terra.png" alt="logo
                 ">
             </div>
             <div class="home-text">
