--- a/lixo.html
+++ b/lixo.html
@@ -7,58 +7,6 @@
     <title>Lixo Eletrônico</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="lixo.css">
-    <style>
-         .abas {
-            display: flex;
-            justify-content: center;
-            border: 1px solid black;
-            width: 95%;
-            margin: auto;
-        }
-
-        .aba {
-            flex: 1;
-            padding: 5px;
-            cursor: pointer;
-            border-right: 1px solid rgb(128, 128, 128);
-            background-color: white;
-            color: black;
-            font-weight: 600;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .aba:last-child {
-            border-right: none;
-        }
-
-        .aba.ativa {
-            background-color: #1aeca6;
-            color: white;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .conteudo {
-            width: 95%;
-            margin: auto;
-            padding: 15px;
-            border: 1px solid black;
-            background-color: white;
-            display: none;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            margin-bottom: 50px;
-        }
-
-        .conteudo.ativo {
-            display: block;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -152,21 +100,6 @@
         </main>
 
     <script src="script.js"></script>
-    <script>
-        function mostrarConteudo(index) {
-            let abas = document.querySelectorAll('.aba');
-            let conteudos = document.querySelectorAll('.conteudo');
-
-            abas.forEach((aba, i) => {
-                if (i === index) {
-                    aba.classList.add('ativa');
-                    conteudos[i].classList.add('ativo');
-                } else {
-                    aba.classList.remove('ativa');
-                    conteudos[i].classList.remove('ativo');
-                }
-            });
-        }
-    </script>
+    <script src="lixo.js"></script>
 </body>
 </html>
